# Visual_AI

./: README.md
Visual_AI/: .gitignore  README.md  docker-compose.yml
Visual_AI/backend/visual_ai_server/: README.md  requirements.txt
Visual_AI/backend/visual_ai_server/tests/: test_inference.py
Visual_AI/frontend/visual_ai_app/: pubspec.yaml
Visual_AI/frontend/visual_ai_app/android/: build.gradle.kts  gradle.properties
Visual_AI/frontend/visual_ai_app/assets/: labels.txt
backend/visual_ai_server/: README.md  dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt
backend/visual_ai_server/scripts/: setup_dev.ps1  setup_dev.sh
backend/visual_ai_server/src/: main.py
backend/visual_ai_server/src/app/: main.py
backend/visual_ai_server/src/app/core/: config.py  model_manager.py
backend/visual_ai_server/src/app/db/: database.py
backend/visual_ai_server/src/app/models/: prediction.py
backend/visual_ai_server/src/app/routers/: images.py  predictions.py
backend/visual_ai_server/src/app/schemas/: prediction.py
backend/visual_ai_server/src/core/: config.py
backend/visual_ai_server/src/db/: _init_.py  database.py
backend/visual_ai_server/src/models/: _init_.py
frontend/visual_ai_app/: README.md  analysis_options.yaml  pubspec.yaml
frontend/visual_ai_app/android/: build.gradle  gradle.properties  settings.gradle.kts
frontend/visual_ai_app/lib/: annotate_image.dart  api_client.dart  main.dart  model_manager.dart
frontend/visual_ai_app/temp_visual_ai_app/: README.md  pubspec.yaml
frontend/visual_ai_app/test/: widget_test.dart
(+59 files in other folders)
